# rust-examples

./: .gitattributes  README.md
adv-concepts/darshak-lb/: Cargo.toml  README.md
adv-concepts/gql/: Cargo.toml
adv-concepts/gql/scripts/: api-target  start-load-test.sh
adv-concepts/gql/src/: main.rs
attribute/: config.rs
basics/flow-control/: enums-match.rs  if-example.rs  nested-loop  pointers-ref
basics/hello_world/: activity  comments  formatted_print
basics/variable-bindings/: scoped_variables  scoped_variables.rs
casting/: alias.rs  casting  casting.rs  literals
crates/: rary.rs
custom-types/constants/: constants
custom-types/structs/: calculate_area_before.rs  structures  structures.rs
design-patterns/builder/: builder
design-patterns/command/: remote-control.rs
design-patterns/command_chain/: chain.rs
design-patterns/interfaces/: simple-interface  simple-interface.rs
design-patterns/strategy/: fly_behavior  fly_behavior.rs
expressions/: simple  simple.rs
flow-control/: enums-match  fizzbuzz.rs  if-let.rs  nested-loop.rs  pointers-ref.rs  range  range.rs
flow-control/guard/: guard.rs
formatting/: formatting.rs
functions/closures/: closure
functions/fizzbuzz/: fizzbuzz
functions/input/: input  input.rs
functions/output/: output.rs
hello_world/: comments.rs  formatted_print.rs
macros/: simple  simple.rs
premitve-types/: premitive.rs
programs/: find_max
testing/: simple_test
threading/: thead
trait/: converter  simple_trait
variable-bindings/: mutability  mutability.rs  variables  variables.rs
(+81 files in other folders)
